# src/controllers/cards.controller.js
@@ -31,19 +31,26 @@ module.exports = {
                 .json(error.messages);
         }
     },
-    listById: async (req,res) => {
+    get: async (req,res) => {
         try {
-            const _id = req.params.id;
-            const response = await cardsService.listById(_id);
-            if(!response || response.data.length === 0) {
-                return res.status(StatusCodes.NO_CONTENT).end();
-            }
-            return res.status(StatusCodes.OK).json(response);
+            const response = await cardsService.get(req.params.id);
+            return res.status(StatusCodes.OK).json(response.dataValues);
         }
         catch(error) {
             return res
                 .status(error.status || StatusCodes.INTERNAL_SERVER_ERROR)
                 .json(error.messages);
         }
-    } 
+    },
+    update: async (req,res) => {
+        try{
+            const response = await cardsService.update(req.params.id, req.body);
+            return res.status(StatusCodes.OK).json(response.dataValues);
+        }
+        catch(error){
+            return res
+                .status(error.status || StatusCodes.INTERNAL_SERVER_ERROR)
+                .json(error.messages);
+        }
+    }, 
 }
